--- a/CODENAMETactical/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CODENAMETactical/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -177,7 +177,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 LastLevel=/Game/Maps/BattleGround1
 
 [ModuleFileTracking]
-CODENAMETactical.TimeStamp=2023.05.01-20.08.18
+CODENAMETactical.TimeStamp=2023.05.10-17.45.41
 CODENAMETactical.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.02.28-18.33.34
 StorageServerClient.LastCompileMethod=Unknown
@@ -1289,9 +1289,17 @@ PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 Actor="\"Object\" "
+FoliageType_InstancedStaticMesh="\"Object\" \"Object.Painting.VertexColorMaskByChannel\" "
+FoliageType="\"Object\" \"Object.Painting.VertexColorMaskByChannel\" "
+SkeletalMeshComponent="\"Object\" "
+SkinnedMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
+CameraComponent="\"Object\" "
+SpringArmComponent="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1350,11 +1358,12 @@ MRUItem3=/Game/Low_Poly_Viking_World/Maps/Map_01_Winter_Night
 MRUItem4=/Game/Low_Poly_Viking_World/Maps/Overview_Map
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/BattleGround1
-MRUItem1=/Game/Low_Poly_Viking_World/Maps/Map_01_Night
-MRUItem2=/Game/Low_Poly_Viking_World/Maps/Map_01_Winter_Day
-MRUItem3=/Game/Low_Poly_Viking_World/Maps/Map_01_Winter_Night
-MRUItem4=/Game/Low_Poly_Viking_World/Maps/Overview_Map
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/Maps/BattleGround1
+MRUItem2=/Game/Low_Poly_Viking_World/Maps/Map_01_Night
+MRUItem3=/Game/Low_Poly_Viking_World/Maps/Map_01_Winter_Day
+MRUItem4=/Game/Low_Poly_Viking_World/Maps/Map_01_Winter_Night
+MRUItem5=/Game/Low_Poly_Viking_World/Maps/Overview_Map
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -1860,6 +1869,93 @@ SceneComponent.Rendering=True
 SceneComponent.Tags=True
 SceneComponent.Activation=True
 SceneComponent.Cooking=True
+FoliageType_InstancedStaticMesh.Mesh=True
+FoliageType_InstancedStaticMesh.Painting=True
+FoliageType_InstancedStaticMesh.Placement=True
+FoliageType_InstancedStaticMesh.InstanceSettings=True
+FoliageType_InstancedStaticMesh.Scalability=True
+FoliageType_InstancedStaticMesh.Physics=True
+FoliageType_InstancedStaticMesh.VirtualTexture=True
+FoliageType_InstancedStaticMesh.HLOD=True
+BP_ThirdPersonCharacter_C.TransformCommon=True
+BP_ThirdPersonCharacter_C.Animation=True
+BP_ThirdPersonCharacter_C.Mesh=True
+BP_ThirdPersonCharacter_C.Input=True
+BP_ThirdPersonCharacter_C.Tick=True
+BP_ThirdPersonCharacter_C.Camera=True
+BP_ThirdPersonCharacter_C.ComponentTick=True
+BP_ThirdPersonCharacter_C.Physics=True
+BP_ThirdPersonCharacter_C.Clothing=True
+BP_ThirdPersonCharacter_C.Collision=True
+BP_ThirdPersonCharacter_C.Lighting=True
+BP_ThirdPersonCharacter_C.LeaderPoseComponent=True
+BP_ThirdPersonCharacter_C.AnimationRig=True
+BP_ThirdPersonCharacter_C.Deformer=True
+BP_ThirdPersonCharacter_C.SkinWeights=True
+BP_ThirdPersonCharacter_C.Rendering=True
+BP_ThirdPersonCharacter_C.HLOD=True
+BP_ThirdPersonCharacter_C.Mobile=True
+BP_ThirdPersonCharacter_C.Navigation=True
+BP_ThirdPersonCharacter_C.RayTracing=True
+BP_ThirdPersonCharacter_C.VirtualTexture=True
+BP_ThirdPersonCharacter_C.Tags=True
+BP_ThirdPersonCharacter_C.AssetUserData=True
+BP_ThirdPersonCharacter_C.Replication=True
+BP_ThirdPersonCharacter_C.ComponentReplication=True
+BP_ThirdPersonCharacter_C.Activation=True
+BP_ThirdPersonCharacter_C.Variable=True
+BP_ThirdPersonCharacter_C.Cooking=True
+BP_ThirdPersonCharacter_C.Character Movement (General Settings)=True
+BP_ThirdPersonCharacter_C.Character Movement: Walking=True
+BP_ThirdPersonCharacter_C.Character Movement: Jumping / Falling=True
+BP_ThirdPersonCharacter_C.Character Movement (Networking)=True
+BP_ThirdPersonCharacter_C.Character Movement: Swimming=True
+BP_ThirdPersonCharacter_C.Character Movement: Flying=True
+BP_ThirdPersonCharacter_C.Character Movement: Custom Movement=True
+BP_ThirdPersonCharacter_C.Character Movement (Rotation Settings)=True
+BP_ThirdPersonCharacter_C.Character Movement: Physics Interaction=True
+BP_ThirdPersonCharacter_C.Character Movement=True
+BP_ThirdPersonCharacter_C.Character Movement: Avoidance=True
+BP_ThirdPersonCharacter_C.RootMotion=True
+BP_ThirdPersonCharacter_C.Character Movement: NavMesh Movement=True
+BP_ThirdPersonCharacter_C.NavMovement=True
+BP_ThirdPersonCharacter_C.Velocity=True
+BP_ThirdPersonCharacter_C.PlanarMovement=True
+BP_ThirdPersonCharacter_C.MovementComponent=True
+BP_ThirdPersonCharacter_C.Shape=True
+BP_ThirdPersonCharacter_C.Character=True
+BP_ThirdPersonCharacter_C.Pawn=True
+BP_ThirdPersonCharacter_C.Actor=True
+BP_ThirdPersonCharacter_C.WorldPartition=True
+BP_ThirdPersonCharacter_C.Events=True
+BP_ThirdPersonCharacter_C.Materials=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.ComponentTick=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.ComponentTick=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1879,4 +1975,18 @@ RecentlyPlaced=/Game/Low_Poly_Viking_World/Particles/P_Candle.P_Candle;
 [DetailCategoriesAdvanced]
 InstancedFoliageActor.Collision=True
 InstancedFoliageActor.Actor=True
+FoliageType_InstancedStaticMesh.Mesh=True
+FoliageType_InstancedStaticMesh.Painting=True
+FoliageType_InstancedStaticMesh.VirtualTexture=True
+
+[FoliageEdit]
+WindowPosition=-1,-1,284,400
+bFilterFoliage=False
+bShowPaletteItemDetails=True
+bShowPaletteItemTooltips=True
+ActivePaletteViewMode=0
+PaletteThumbnailScale=0.300000012
+IsInSingleInstantiationMode=False
+IsInSpawnInCurrentLevelMode=False
+SingleInstantiationPlacementMode=0
 
