--- a/CODENAMETactical/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CODENAMETactical/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1290,9 +1290,14 @@ PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 Actor="\"Object\" "
+SkeletalMeshComponent="\"Object\" "
+SkinnedMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
+CameraComponent="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1353,12 +1358,13 @@ MRUItem4=/Game/Low_Poly_Viking_World/Maps/Map_01_Winter_Day
 MRUItem5=/Game/Low_Poly_Viking_World/Maps/Overview_Map
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/BattleGround1
-MRUItem1=/Game/Low_Poly_Viking_World/Maps/Map_01_Winter_Night
-MRUItem2=/Game/Low_Poly_Viking_World/Maps/Map_01_Night
-MRUItem3=/Game/Low_Poly_Viking_World/Maps/Map_02_Interior
-MRUItem4=/Game/Low_Poly_Viking_World/Maps/Map_01_Winter_Day
-MRUItem5=/Game/Low_Poly_Viking_World/Maps/Overview_Map
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/Maps/BattleGround1
+MRUItem2=/Game/Low_Poly_Viking_World/Maps/Map_01_Winter_Night
+MRUItem3=/Game/Low_Poly_Viking_World/Maps/Map_01_Night
+MRUItem4=/Game/Low_Poly_Viking_World/Maps/Map_02_Interior
+MRUItem5=/Game/Low_Poly_Viking_World/Maps/Map_01_Winter_Day
+MRUItem6=/Game/Low_Poly_Viking_World/Maps/Overview_Map
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -1864,6 +1870,72 @@ SceneComponent.Rendering=True
 SceneComponent.Tags=True
 SceneComponent.Activation=True
 SceneComponent.Cooking=True
+WorldPartitionRuntimeSpatialHash.RuntimeSettings=True
+BP_ThirdPersonCharacter_C.TransformCommon=True
+BP_ThirdPersonCharacter_C.Animation=True
+BP_ThirdPersonCharacter_C.Mesh=True
+BP_ThirdPersonCharacter_C.Input=True
+BP_ThirdPersonCharacter_C.Tick=True
+BP_ThirdPersonCharacter_C.Camera=True
+BP_ThirdPersonCharacter_C.ComponentTick=True
+BP_ThirdPersonCharacter_C.Physics=True
+BP_ThirdPersonCharacter_C.Clothing=True
+BP_ThirdPersonCharacter_C.Collision=True
+BP_ThirdPersonCharacter_C.Lighting=True
+BP_ThirdPersonCharacter_C.LeaderPoseComponent=True
+BP_ThirdPersonCharacter_C.AnimationRig=True
+BP_ThirdPersonCharacter_C.Deformer=True
+BP_ThirdPersonCharacter_C.SkinWeights=True
+BP_ThirdPersonCharacter_C.Rendering=True
+BP_ThirdPersonCharacter_C.HLOD=True
+BP_ThirdPersonCharacter_C.Mobile=True
+BP_ThirdPersonCharacter_C.Navigation=True
+BP_ThirdPersonCharacter_C.RayTracing=True
+BP_ThirdPersonCharacter_C.VirtualTexture=True
+BP_ThirdPersonCharacter_C.Tags=True
+BP_ThirdPersonCharacter_C.AssetUserData=True
+BP_ThirdPersonCharacter_C.Replication=True
+BP_ThirdPersonCharacter_C.ComponentReplication=True
+BP_ThirdPersonCharacter_C.Activation=True
+BP_ThirdPersonCharacter_C.Variable=True
+BP_ThirdPersonCharacter_C.Cooking=True
+BP_ThirdPersonCharacter_C.Character Movement (General Settings)=True
+BP_ThirdPersonCharacter_C.Character Movement: Walking=True
+BP_ThirdPersonCharacter_C.Character Movement: Jumping / Falling=True
+BP_ThirdPersonCharacter_C.Character Movement (Networking)=True
+BP_ThirdPersonCharacter_C.Character Movement: Swimming=True
+BP_ThirdPersonCharacter_C.Character Movement: Flying=True
+BP_ThirdPersonCharacter_C.Character Movement: Custom Movement=True
+BP_ThirdPersonCharacter_C.Character Movement (Rotation Settings)=True
+BP_ThirdPersonCharacter_C.Character Movement: Physics Interaction=True
+BP_ThirdPersonCharacter_C.Character Movement=True
+BP_ThirdPersonCharacter_C.Character Movement: Avoidance=True
+BP_ThirdPersonCharacter_C.RootMotion=True
+BP_ThirdPersonCharacter_C.Character Movement: NavMesh Movement=True
+BP_ThirdPersonCharacter_C.NavMovement=True
+BP_ThirdPersonCharacter_C.Velocity=True
+BP_ThirdPersonCharacter_C.PlanarMovement=True
+BP_ThirdPersonCharacter_C.MovementComponent=True
+BP_ThirdPersonCharacter_C.Shape=True
+BP_ThirdPersonCharacter_C.Character=True
+BP_ThirdPersonCharacter_C.Pawn=True
+BP_ThirdPersonCharacter_C.Actor=True
+BP_ThirdPersonCharacter_C.WorldPartition=True
+BP_ThirdPersonCharacter_C.Events=True
+BP_ThirdPersonCharacter_C.Materials=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.ComponentTick=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1883,4 +1955,8 @@ RecentlyPlaced=/Game/Low_Poly_Viking_World/Particles/P_Candle.P_Candle;
 [DetailCategoriesAdvanced]
 InstancedFoliageActor.Collision=True
 InstancedFoliageActor.Actor=True
+
+[DetailCustomWidgetExpansion]
+WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,
 
