--- a/CODENAMETactical/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CODENAMETactical/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -173,12 +173,14 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Maps
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Maps/BattleGround1
 
 [ModuleFileTracking]
-CODENAMETactical.TimeStamp=2023.05.10-17.32.56
+CODENAMETactical.TimeStamp=2023.05.10-17.45.41
 CODENAMETactical.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.05.01-19.14.12
 StorageServerClient.LastCompileMethod=External
@@ -1290,9 +1292,29 @@ PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 Actor="\"Object\" "
+MaterialEditorInstanceConstant="\"Object\" "
+MaterialInstanceConstant="\"Object\" "
+MaterialInstance="\"Object\" "
+MaterialInterface="\"Object\" "
+Texture2D="\"Object\" "
+Texture="\"Object\" "
+StreamableRenderAsset="\"Object\" "
+PreviewMaterial="\"Object\" "
+Material="\"Object\" "
+MaterialExpressionTextureSampleParameter2D="\"Object\" "
+MaterialExpressionTextureSampleParameter="\"Object\" "
+MaterialExpressionTextureSample="\"Object\" "
+MaterialExpressionTextureBase="\"Object\" "
+MaterialExpression="\"Object\" "
+WorldSettings="\"Object.Lightmass.LightmassSettings\" \"Object.HLODSystem.HierarchicalLODSetup\" \"Object.HLODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" "
+Info="\"Object.Lightmass.LightmassSettings\" \"Object.HLODSystem.HierarchicalLODSetup\" \"Object.HLODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Low_Poly_Viking_World/Materials/Landscapes/MI_Landscape_01.MI_Landscape_01
+OpenAssetsAtExit=/Game/Low_Poly_Viking_World/Textures/Landscapes/T_Gound_01.T_Gound_01
+OpenAssetsAtExit=/Game/Low_Poly_Viking_World/Materials/Landscapes/M_Landscape.M_Landscape
+OpenAssetsAtExit=/Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1353,12 +1375,16 @@ MRUItem4=/Game/Low_Poly_Viking_World/Maps/Map_01_Winter_Day
 MRUItem5=/Game/Low_Poly_Viking_World/Maps/Overview_Map
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/BattleGround1
-MRUItem1=/Game/Low_Poly_Viking_World/Maps/Map_01_Winter_Night
-MRUItem2=/Game/Low_Poly_Viking_World/Maps/Map_01_Night
-MRUItem3=/Game/Low_Poly_Viking_World/Maps/Map_02_Interior
-MRUItem4=/Game/Low_Poly_Viking_World/Maps/Map_01_Winter_Day
-MRUItem5=/Game/Low_Poly_Viking_World/Maps/Overview_Map
+MRUItem0=/Game/StarterContent/Materials/M_Ground_Grass
+MRUItem1=/Game/Low_Poly_Viking_World/Materials/Landscapes/M_Landscape
+MRUItem2=/Game/Low_Poly_Viking_World/Textures/Landscapes/T_Gound_01
+MRUItem3=/Game/Low_Poly_Viking_World/Materials/Landscapes/MI_Landscape_01
+MRUItem4=/Game/Maps/BattleGround1
+MRUItem5=/Game/Low_Poly_Viking_World/Maps/Map_01_Winter_Night
+MRUItem6=/Game/Low_Poly_Viking_World/Maps/Map_01_Night
+MRUItem7=/Game/Low_Poly_Viking_World/Maps/Map_02_Interior
+MRUItem8=/Game/Low_Poly_Viking_World/Maps/Map_01_Winter_Day
+MRUItem9=/Game/Low_Poly_Viking_World/Maps/Overview_Map
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -1864,6 +1890,37 @@ SceneComponent.Rendering=True
 SceneComponent.Tags=True
 SceneComponent.Activation=True
 SceneComponent.Cooking=True
+WorldPartitionRuntimeSpatialHash.RuntimeSettings=True
+WorldSettings.Cooking=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.NotVisible=True
+PreviewMaterial.Nanite=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionTextureSampleParameter2D.General=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
+MaterialExpressionTextureSampleParameter2D.ParameterCustomization=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1883,4 +1940,10 @@ RecentlyPlaced=/Game/Low_Poly_Viking_World/Particles/P_Candle.P_Candle;
 [DetailCategoriesAdvanced]
 InstancedFoliageActor.Collision=True
 InstancedFoliageActor.Actor=True
+
+[DetailCustomWidgetExpansion]
+WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Auto,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Auto,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
 
